[project]
name = "smc-explorer"
dynamic = ["version"]

description = "shows resources configured in a forcepoint smc"
readme = "README.md"
authors = [

]
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.0",
    "jmespath>=1.0.1",
    "requests>=2.32.5",
]

[project.scripts]
smc-explorer = "smc_explorer:cli.main"

[dependency-groups]
dev = [
    "pipx>=1.8.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
[tool.setuptools_scm]

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"
